--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "uuid": "^8.3.0"
+  },
+  "devDependencies": {
+    "mocha": "^8.1.3"
   }
 }
